...
                                            <nil key="highlightedColor"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="nameLabel"/>
                                            </userDefinedRuntimeAttributes>
                                        </label>
...
                                            <nil key="highlightedColor"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="durationLabel"/>
                                            </userDefinedRuntimeAttributes>
                                        </label>
...
                        <barButtonItem title="New" id="ldp-iM-hlM">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="newBarButtonItem"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Presets" largeTitleDisplayMode="always" id="HEt-4c-01I"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                                <state key="normal" title="Save"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="saveButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <rect key="frame" x="16" y="367" width="382" height="216"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="durationPicker"/>
                                </userDefinedRuntimeAttributes>
                            </pickerView>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="nameTextField"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
...
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="H9F-D3-vTo">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cancelBarButtonItem"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                <state key="normal" title="Start"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="startButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="Pause"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="pauseButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <state key="normal" title="Reset"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="resetButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
