...
        let cell = tableView.dequeueReusableCell(withIdentifier: "DefaultCell")!
        bindCell(cell, indexPath)
        return cell
    }
    
    override func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        let action = UIContextualAction(style: .destructive, title: NSLocalizedString("Delete", comment: "Delete")) { _, _, completionHandler in
            let context = self.persistentContainer.viewContext
            context.delete(self.fetchedResultsController.object(at: indexPath))
            try! context.save()
            completionHandler(true)
        }
        let config = UISwipeActionsConfiguration(actions: [action])
...
